--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -125,7 +125,8 @@ td.company-link:hover {
   color: gray;
 }
 
-#hoodcast-search-button {
+#hoodcast-search-button,
+input[type="submit" i] {
   width: 160px;
   height: 65px;
   border-radius: 8px;
