Change stylesheet to include user select text in input fields

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -64,6 +64,8 @@ body {
   text-align: left;
   color: #4f4f4f;
   -webkit-user-select: text;
+  -moz-user-select: text;
+  user-select: text;
 }
 
 #search {
