--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -37,6 +37,7 @@ body {
 #hoodcast-icon {
   margin: 25px 0 15px 0;
   width: 30%;
+  max-width: 300px;
 }
 
 #form-panels {
@@ -217,7 +218,7 @@ a h2,
   }
 
   #hoodcast-icon {
-    width: 40%;
+    width: 50%;
   }
     
   #hoodcast-search-button {
@@ -241,4 +242,43 @@ a h2,
     height: 55px;
     font-size: 2rem;
   }
+}
+
+.autocomplete {
+  position: relative;
+}
+
+.autocomplete-items {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  margin: 0 auto;
+  z-index: 99;
+  width: 304px;
+  top: 100%;
+  left: 0;
+  right: 0;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  width: 100%;
+  cursor: pointer;
+  background-color: #fff; 
+  border-bottom: 1px solid #d4d4d4; 
+}
+
+/*when hovering an item:*/
+.autocomplete-items div:hover {
+  background-color: #e9e9e9; 
+}
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+  background-color: gold !important; 
 }
