--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hoodcast</title>
+    <title>Hoodcast Gold</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:500" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/reset.css') }}" type="text/css" />
