--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -54,7 +54,9 @@ svg, path,
   color: #000;
   width: 65%;
   margin: 0 auto;
+  padding: var(--space);
   border-radius: 10px;
+  overflow-y: scroll;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -173,24 +175,24 @@ h2#hidden.subheader:hover {
   color: black;
 }
 
-.gold-medal-table th:nth-child(-n+3) {
+.hoodcast-table th:nth-child(-n+3) {
   width:15%;
 }
 
-.gold-medal-table th:nth-child(n+4) {
+.hoodcast-table th:nth-child(n+4) {
   width:20%;
 }
 
 .site-main-background {
-  background-color: gray;
   bottom: 0;
   display: block;
-  height: 500px;
+  position: fixed;
+  height: 49.5vh;
   left: 0;
-  position: absolute;
   right: 0;
   top: 0;
   z-index: -1;
+  background-color: gray;
 }
 
 .sort,
@@ -225,7 +227,7 @@ path,
   }
 
   .site-main-background {
-    height: 300px;
+    height: 250px;
   }
 }
 
@@ -248,7 +250,7 @@ path,
   }
     
   .site-main-background {
-    height: 300px;
+    height: 250px;
   }
 }
 
