--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
           type="text/css" />
       
     <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       
   </head>
   <body>
@@ -90,7 +91,6 @@
       <div class="site-main-background" arai-hidden="true"></div>
     </div>
       
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript">
       var companies = {{ companies|tojson }}; 
       var companyArray = [];
@@ -98,13 +98,11 @@
         companyArray.push(companies[i][0]);
       }
     </script>
+      
     <script src="{{ url_for('static', 
                  filename='javascripts/autocomplete.js') }}"></script>
-      
-    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js"></script>
-    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js"></script>
-    <script src="{{ url_for('static', filename='javascripts/svg-load.js') }}"></script>
+    <script src="{{ url_for('static',
+                 filename='javascripts/svg-load.js') }}"></script>
       
   </body>
 </html>
