--- a/templates/metrics.html
+++ b/templates/metrics.html
@@ -40,7 +40,7 @@
 </div>
 
 {% for x in range(table_titles|length) %}
-<div id="to-{{ table_titles[x].lower() }}">
+<div id="to-{{ table_titles[x].lower() }}" class="table-start">
   <h2 id="active" class="subheader">{{ table_titles[x].upper() }}</h2>
   click to view:
   <select id="{{ table_titles[x].lower() }}-selector" class="selectors">
@@ -60,23 +60,21 @@
   </select>
     
   <div class="table-container">
-    <table class="hoodcast-table">
+    <table id="table-{{ table_titles[x] }}" class="hoodcast-table">
       <tbody>
         <tr class="table-header hoodcast-header">
 
-          {% for column in df_dict[table_titles[x]]['columns'] %}
-          <th id="headers">
-            {{ column.lower().title() }}
-            <a href="{{ url_for('metrics', name=name, form_type=form_type, 
-                     year=year) }}">
-              <img class="sort" 
+          {% for i in range(df_dict[table_titles[x]]['columns']|length) %}
+          <th id="headers-{{ x }}-{{ i }}">
+            {{ df_dict[table_titles[x]]['columns'][i].lower().title() }}
+            <a href="#void">
+              <img class="sortasc-{{ i }}" 
                    alt="Sort Ascending"
                    src="{{ url_for('static', 
                         filename='resources/images/up.svg') }}" />
             </a>
-            <a href="{{ url_for('metrics', name=name, form_type=form_type, 
-                     year=year) }}">
-              <img class="sort"
+            <a href="#void">
+              <img class="sortdesc-{{ i }}"
                    alt="Sort Descending" 
                    src="{{ url_for('static', 
                         filename='resources/images/down.svg') }}" />
@@ -85,26 +83,28 @@
           {% endfor %}
 
         </tr>
-
-        {% for k in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]]|length) %}
-        <tr key="{{ k }}">
-          {% for w in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]][k]|length) %}
+          
+        {% for i in range((df_dict[table_titles[x]]['keys_list']|length)-1) %}
+        {% for k in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]]|length) %}
+        <tr id="{{ table_titles[x].lower() }}-{{ i+1 }}" key="{{ k }}">
+          {% for w in range(df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k]|length) %}
           {% if k != 0 and w == 0 %}
-          {% if df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]][k][w] == df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]][k-1][w] %}
+          {% if df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] == df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k-1][w] %}
           <td key="row{{ k }}-{{ w }}"></td>
           {% else %}
           <td key="row{{ k }}-{{ w }}">
-            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]][k][w] }}
+            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] }}
           </td>
           {% endif %}
           {% else %}
           <td key="row{{ k }}-{{ w }}">
-            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][1]][k][w] }}
+            {{ df_dict[table_titles[x]][df_dict[table_titles[x]]['keys_list'][i+1]][k][w] }}
           </td>
           {% endif %}
           {% endfor %}
         </tr>
         {% endfor %}  
+        {% endfor %}
 
       </tbody>
     </table>
