--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" 
           href="{{ url_for('static', filename='stylesheets/svg-load.css') }}" 
           type="text/css" />
-      
+
     <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
       
@@ -99,10 +99,27 @@
       }
     </script>
       
+    <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
     <script src="{{ url_for('static', 
                  filename='javascripts/autocomplete.js') }}"></script>
     <script src="{{ url_for('static',
                  filename='javascripts/svg-load.js') }}"></script>
+      
+    {% if scrollToAnchor %}
+    <script>  
+      var body = document.querySelector('body');
+      var container = document.getElementById('container');
+      document.addEventListener('DOMContentLoaded', function() {
+        document.location.hash = '#{{ scrollToAnchor }}';
+      });
+      body.style.background = 'white';
+      container.style.height = '75vh';
+    </script>
+    {% endif %}
+    
+    <script>
+      container.style.display = 'block';
+    </script>
       
   </body>
 </html>
