--- a/templates/base.html
+++ b/templates/base.html
@@ -16,9 +16,6 @@
     <link rel="stylesheet" 
           href="{{ url_for('static', filename='stylesheets/style.css') }}" 
           type="text/css" />
-    <link rel="stylesheet" 
-          href="{{ url_for('static', filename='stylesheets/svg-load.css') }}" 
-          type="text/css" />
 
     <script src="//cdn.jsdelivr.net/jquery/2.2.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -27,10 +24,10 @@
   <body>
       
     <div id="hoodcast-icon">
-      <a href="{{ url_for('index') }}">
+      <a id="icon-link" href="{{ url_for('index') }}">
         <svg xmlns="http://www.w3.org/2000/svg" 
              xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" 
-             id="hoodcast_x6F_logo" x="0px" y="0px" width="100%" 
+             id="hoodcast-logo" x="0px" y="0px" width="100%" 
              height="100%" viewBox="0 0 1000 311.491" 
              enable-background="new 0 0 1000 311.491" xml:space="preserve">
           <g id="logo">
@@ -45,8 +42,8 @@
           </g>
         </svg>
         <img id="main-logo" 
-             class="sort" 
-             alt="Sort Descending" 
+             class="logo"
+             alt="Application Logo"
              src="{{ url_for('static', 
                   filename='resources/images/hoodcast-gold.svg') }}" />
       </a>
